--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<html>
-<head>
-</head>
-<body>
-Works
-</body>
-</html>
+<!doctype html>
+<title>Under Maintenance</title>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
+
+<article>
+    <h1>We&rsquo;ll be back soon!</h1>
+    <div>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.</p>
+        <p>&mdash; Jimbo</p>
+    </div>
+</article>
